--- a/Sidebar.html
+++ b/Sidebar.html
@@ -2842,7 +2842,7 @@
         <div id="section1_error_summary" class="error-summary" data-show="0" aria-live="polite"></div>
 
         <div class="group" id="caseProfileBasicGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">一、基本資料</span>
+          <span class="h4 heading-tier heading-tier--section">基本資料</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileBasicCard">
@@ -2871,7 +2871,7 @@
         </div>
 
         <div class="group" id="caseProfileSensoryGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">二、感官功能</span>
+          <span class="h4 heading-tier heading-tier--section">感官功能</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileVisionCard">
@@ -2941,7 +2941,7 @@
         </div>
 
         <div class="group" id="caseProfileOralGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">三、口腔與吞嚥功能</span>
+          <span class="h4 heading-tier heading-tier--section">口腔與吞嚥功能</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileSwallowCard">
@@ -2984,7 +2984,7 @@
         </div>
 
         <div class="group" id="caseProfileMobilityGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">四、移動功能</span>
+          <span class="h4 heading-tier heading-tier--section">移動功能</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileMobilityCard">
@@ -3086,7 +3086,7 @@
         </div>
 
         <div class="group" id="caseProfileAdlGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">五、ADL（日常生活活動）</span>
+          <span class="h4 heading-tier heading-tier--section">ADL（日常生活活動）</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileAdlCard">
@@ -3144,7 +3144,7 @@
         </div>
 
         <div class="group" id="caseProfileIadlGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">六、IADL（工具性日常活動）</span>
+          <span class="h4 heading-tier heading-tier--section">IADL（工具性日常活動）</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileIadlCard">
@@ -3227,7 +3227,7 @@
         </div>
 
         <div class="group" id="caseProfileExcretionGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">七、排泄功能</span>
+          <span class="h4 heading-tier heading-tier--section">排泄功能</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileExcretionCard">
@@ -3272,7 +3272,7 @@
         </div>
 
         <div class="group" id="caseProfileHealthGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">八、健康狀況與病史</span>
+          <span class="h4 heading-tier heading-tier--section">健康狀況與病史</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfileDiseaseCard">
@@ -3361,7 +3361,7 @@
         </div>
 
         <div class="group" id="caseProfilePsychGroup" data-collapsed="0">
-          <span class="h4 heading-tier heading-tier--section">九、心理與行為狀態</span>
+          <span class="h4 heading-tier heading-tier--section">心理與行為狀態</span>
           <div class="group-content">
             <div class="section-card-grid">
               <section class="section-card" id="caseProfilePsychBehaviorCard">
