--- a/Sidebar.html
+++ b/Sidebar.html
@@ -2599,7 +2599,7 @@
           </button>
           <button type="button" class="wizard-step" data-step="2" data-page="goals" data-anchor="#contactVisitGroup">
             <span class="wizard-index">2</span>
-            <span class="wizard-label">照顧目標</span>
+            <span class="wizard-label">計畫目標</span>
           </button>
           <button type="button" class="wizard-step" data-step="3" data-page="execution" data-anchor="#planExecutionGroup">
             <span class="wizard-index">3</span>
