fix: adjust wizard connector spacing

--- a/src/Sidebar.html
+++ b/src/Sidebar.html
@@ -1031,8 +1031,8 @@
       content:'';
       position:absolute;
       top:calc(var(--wizard-index-size) / 2);
-      left:-50%;
-      width:100%;
+      left:calc(-50% - var(--space-sm) / 2);
+      width:calc(100% + var(--space-sm));
       height:4px;
       background:#dbe5ff;
       z-index:-1;
